--- a/css/style.css
+++ b/css/style.css
@@ -29,25 +29,8 @@ body::-webkit-scrollbar-thumb:hover {
 }
 
 header {
-    padding-top: 10px;
-    padding-left: 20px;
-    padding-bottom: 10px;
     position: fixed;
     z-index: 10000;
-}
-
-header img {
-    min-width: 15px;
-    width: 5%;
-    border: solid 5px white;
-    background-color: white;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-    transition: box-shadow 1s;
-}
-
-header img:hover {
-    box-shadow: rgba(238, 238, 238, 0.4) 2px 2px, rgba(219, 219, 219, 0.3) 4px 4px, rgba(196, 196, 196, 0.2) 6px 6px, rgba(172, 172, 172, 0.1) 8px 8px, rgba(146, 146, 146, 0.05) 10px 10px;
-    transition: box-shadow 0.5s;
 }
 
 footer {
@@ -79,9 +62,8 @@ section {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%;
-    padding-top: 25%;
-    padding-bottom: 25%;
+    padding-top: 20%;
+    padding-bottom: 20%;
     background: url('images/bkaccueil.jpg') no-repeat center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -211,21 +193,24 @@ h2 {
     height: 50%;
 }
 
-.contentPrésentation p {
-    height: fit-content;
+.space {
+    margin-left: 5%;
+    margin-right: 5%;
+
 }
 
 .contentCompétences {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     margin-left: 3%;
     margin-right: 3%;
 }
 
 .contentCompétences img{
-    height: auto;
-    width : 5%;
-    transform: translateY(-20%);
+    height: 40em;
+    transform: translateY(0);
+    margin-left: 3%;
+    margin-right: 3%;
 }
 
 .contentQualitésDéfauts {
@@ -248,6 +233,7 @@ h2 {
 .contentQualitésDéfauts div h3 {
     text-align: center;
     color:#ffffff;
+    font-size: 300%;
 }
 
 .contentParcours {
@@ -398,20 +384,166 @@ progress::-moz-progress-bar {
 }
 
 progress::-webkit-progress-value {
-    background: #008080;
+    background: #111111;
+    opacity: 10%;
+    transition: all 0.3s ease;
 }
 
 progress::-webkit-progress-bar {
     background: rgb(255, 255, 255);
 }
 
-progress:hover {
+.logiciel:hover progress::-webkit-progress-value, .langage:hover progress::-webkit-progress-value{
     background: #008080;
-    transform: translateX(5%);
-    transition: all 0.5s ease;
+    opacity: 100%;
+    transition: all 1s ease;
 }
 
 iframe{
-    transform: translateY(1em) translateX(-2.5em);
+    transform: translateY(1em) translateX(-0.5em);
     mix-blend-mode: darken;
+}
+
+/****/
+
+#menuToggle
+{
+    display: block;
+    position: relative;
+    top: 50px;
+    left: 50px;
+
+    z-index: 10;
+
+    -webkit-user-select: none;
+    user-select: none;
+}
+
+#menuToggle a
+{
+    text-decoration: none;
+    color: #232323;
+
+    transition: color 0.3s ease;
+}
+
+#menuToggle a:hover
+{
+    color: #008080;
+}
+
+
+#menuToggle input
+{
+    display: block;
+    width: 40px;
+    height: 32px;
+    position: absolute;
+    top: -7px;
+    left: -5px;
+
+    cursor: pointer;
+
+    opacity: 0; /* hide this */
+    z-index: 2; /* and place it over the hamburger */
+
+    -webkit-touch-callout: none;
+}
+
+/*
+ * Just a quick hamburger
+ */
+#menuToggle span
+{
+    display: block;
+    width: 33px;
+    height: 4px;
+    margin-bottom: 5px;
+    position: relative;
+
+    background: black;
+    border-radius: 3px;
+
+    z-index: 1;
+
+    transform-origin: 4px 0px;
+
+    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+    background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+    opacity 0.55s ease;
+}
+
+#menuToggle span:first-child
+{
+    transform-origin: 0% 0%;
+}
+
+#menuToggle span:nth-last-child(2)
+{
+    transform-origin: 0% 100%;
+}
+
+/*
+ * Transform all the slices of hamburger
+ * into a crossmark.
+ */
+#menuToggle input:checked ~ span
+{
+    opacity: 1;
+    transform: rotate(45deg) translate(-2px, -1px);
+    background: #232323;
+}
+
+/*
+ * But let's hide the middle one.
+ */
+#menuToggle input:checked ~ span:nth-last-child(3)
+{
+    opacity: 0;
+    transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+/*
+ * Ohyeah and the last one should go the other direction
+ */
+#menuToggle input:checked ~ span:nth-last-child(2)
+{
+    transform: rotate(-45deg) translate(0, -1px);
+}
+
+/*
+ * Make this absolute positioned
+ * at the top left of the screen
+ */
+#menu
+{
+    position: absolute;
+    width: 300px;
+    margin: -100px 0 0 -50px;
+    padding: 50px;
+    padding-top: 125px;
+
+    background: #ededed;
+    list-style-type: none;
+    -webkit-font-smoothing: antialiased;
+    /* to stop flickering of text in safari */
+
+    transform-origin: 0% 0%;
+    transform: translate(-100%, 0);
+
+    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+}
+
+#menu li
+{
+    padding: 10px 0;
+    font-size: 22px;
+}
+
+/*
+ * And let's slide it in from the left
+ */
+#menuToggle input:checked ~ ul
+{
+    transform: none;
 }
